// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H3 component should accept and render passed in styles 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: 900;
  line-height: 1.7249999999999999rem;
  margin: initial;
  color: salmon;
}

<h3
  className="c0 ui-kit-typography-H3-StyledH3"
>
  Salmon text
</h3>
`;

exports[`the H3 component should render 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: 900;
  line-height: 1.7249999999999999rem;
  margin: initial;
}

<h3
  className="c0 ui-kit-typography-H3-StyledH3"
>
  Default H3 text
</h3>
`;

exports[`the H3 component should render a loading state 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 100%;
}

.c1 {
  height: 1.5rem;
  margin: calc(1.7249999999999999rem - 1.5rem) 0;
}

<mark
  className="c0 show-loading-animation c1 ui-kit-H1-Placeholder ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the H3 component should render a loading state with vertical rhythm (padded) 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 100%;
}

.c1 {
  height: 1.5rem;
  margin: 1.6875rem 0 1.125rem 0;
}

<mark
  className="c0 show-loading-animation c1 ui-kit-H1-Placeholder ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the H3 component should render with vertical rhythm (padded) 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: 900;
  line-height: 1.7249999999999999rem;
  margin: 1.6875rem 0 1.125rem 0;
}

<h3
  className="c0 ui-kit-typography-H3-StyledH3"
>
  H3 text with vertical rhythm styled via margin.
</h3>
`;
